# libmoor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  moorconvert.c  moorextract.c  moortest.c  util.h
libmoor/: CMakeLists.txt  bitmap.c  bitmap.h  libmoor.c  libmoor.h
